# dotfiles

./: .aliases  .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmessage.txt  .gitmodules  .gvimrc  .installignore  .tigrc  .tmux.conf  .vimrc  .zlogin  .zlogout  .zpreztorc  .zprofile  .zshenv  .zshrc  CLAUDE.md  Makefile  README.md  install.py  install.sh  karabiner.json  pyproject.toml  test_backup_naming.py  test_setup.sh
.claude/: CLAUDE.md
.vim/: .netrwhist
iterm2/: com.googlecode.iterm2.plist
lib/: backup.py  config.py  template.py
scripts/: test_installer_minimum.py
scripts/bastion/: su-user.sh
scripts/install/pkg/: logger.py  rollback_manager.py
scripts/install/pkg/plan/: builder.py  model.py
scripts/install/tests/: test_logger.py  test_plan_builder.py  test_plan_executor.py  test_rollback_manager.py
scripts/pkg/: __init__.py  backup_store.py  config.py  exclude.py  installer.py  logger.py  rollback_manager.py  symlink.py  ui.py
scripts/pkg/plan/: builder.py  executor.py  model.py
scripts/tests/: __init__.py  test_logger.py  test_plan_builder.py  test_plan_executor.py  test_rollback_manager.py
source/: .aliases  .bash_profile  .bashrc  .gitmessage.txt  .ideavimrc  .vimrc  .zprofile  .zshrc
source/.claude/: CLAUDE.md
source/.config/nvim/: init.vim
template/opt/: README.md
template/tools/: README.md
