[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-installer"
version = "1.0.0"
description = "Safe dotfiles installer with backup/rollback"
requires-python = ">=3.10"
authors = [
    {name = "RY-2718"}
]
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py310"

# 除外パターン
extend-exclude = [
    ".vim",
    "rollbacks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
